test/scc/pp/errors/000.a
000.t:1:9: error: expected a file name